--- a/integration-faces/pom.xml
+++ b/integration-faces/pom.xml
@@ -37,11 +37,13 @@
          <artifactId>jboss-servlet-api_${servlet.spec}_spec</artifactId>
          <scope>provided</scope>
       </dependency>
-      <dependency>
-         <groupId>org.jboss.spec.javax.faces</groupId>
-         <artifactId>jboss-jsf-api_${jsf.spec}_spec</artifactId>
-         <scope>provided</scope>
-      </dependency>
+ 	  <dependency>
+	      <groupId>org.jboss.spec.javax.faces</groupId>
+	      <artifactId>jboss-jsf-api_${jsf.spec}_spec</artifactId>
+	      
+	      <version>3.0.0.Final</version>
+	      <scope>provided</scope>
+	  </dependency>
       <dependency>
          <groupId>org.jboss.spec.javax.el</groupId>
          <artifactId>jboss-el-api_${el.spec}_spec</artifactId>
