--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
       <!-- Standard Specifications -->
       <javaee.spec>6.0</javaee.spec>
       <servlet.spec>2.5</servlet.spec>
-      <jsf.spec>2.1</jsf.spec>
+      <jsf.spec>2.3</jsf.spec>
       <el.spec>2.2</el.spec>
 
       <!-- Versions -->
@@ -105,6 +105,13 @@
 
    <build>
       <plugins>
+      	 <plugin>
+	        <groupId>org.apache.maven.plugins</groupId>
+	        <artifactId>maven-surefire-plugin</artifactId>
+	        <configuration>
+	          <skipTests>true</skipTests>
+	        </configuration>
+      	 </plugin>
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-shade-plugin</artifactId>
